fix: Projects overlap navbar

--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ textarea {
 .menu-button,
 .nav-list {
   position: fixed;
+  z-index: 1;
 }
 
 .nav-item {
